--- a/.github/workflows/.github-ci.yml
+++ b/.github/workflows/.github-ci.yml
@@ -12,7 +12,7 @@ on:
 env:
   ENVIRONMENT: ${{ github.ref_name }}
   AWS_REGION: ${{ vars.AWS_REGION }}
-  ACCOUNT_ID: ${{ vars.AWS_ACCOUNT_ID }}
+  ACCOUNT_ID: ${{ vars.ACCOUNT_ID }}
   ECR_REPOSITORY : ${{ vars.ECR_REPOSITORY }}
 
 # Permission can be added at job level or workflow level    
